attempted to add javascript but having trouble displaying my questions on the page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 </audio>
 </head>
 <body>
+
 <h1><p class="text-center">NBA TRIVIA!</p></h1>	
-<div id="quiz-timer"></div>
+<div id="counter"></div>
 
 <br>	
 <div id="quiz"></div>
