--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 
-	<audio id="myAudio">
-	<source src="https://soundcloud.com/user562836944/john-tesh-nba-on-nbc-roundball-rock" type="audio">
 </audio>
 </head>
 <body>
@@ -19,20 +17,25 @@
 <div id="counter"></div>
 
 <br>	
-<div id="quiz"></div>
+<div id="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<p id="quiz"></p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-12">
+			<button id="submit">result</button>
+		</div>
+	</div>
+	<div clas="row">
+		<div class="col-lg-12">	
+			<p id="results"></p>
+		</div>
+	</div>
+</div>						
 
-<div id="results"></div>
 
-
-
-
-
-
-
-
-
-
-
-</div>
+<script src="assets/javascript/app.js" type="text/javascript"></script>
 </body>
 </html>
