--- a/index2.html
+++ b/index2.html
@@ -16,9 +16,19 @@
 <div id="counter"></div>
 
 <br>	
-<div id="quiz"></div>
+<div id="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<p id="question"></p>
+		</div>
+	</div>	
 
-<div id="results"></div>
+	<div class="row">
+		<div class="col-lg-12">
+			<p id="score"></p>
+		</div>
+	</div>
+</div>		
 
 
 
@@ -30,7 +40,7 @@
 
 
 
-</div>
-	<script src="assets/javascript/app2.js" type="text/javascript"></script>
+
+<script src="assets/javascript/app2.js" type="text/javascript"></script>
 </body>
 </html>
