--- a/index.html
+++ b/index.html
@@ -2,40 +2,27 @@
 <html>
 <head>
 	<title>NBA QUIZ</title>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script src="assets/javascript/app.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-
-</audio>
 </head>
 <body>
+<iframe width="15%" height="50" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/203741037&amp;color=%23ceb7c3&amp;auto_play=true"></iframe>
+
+<div id="wrapper">	
 
 <h1><p class="text-center">NBA TRIVIA!</p></h1>	
-<div id="counter"></div>
-
-<br>	
-<div id="container">
-	<div class="row">
-		<div class="col-lg-12">
-			<p id="quiz"></p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-lg-12">
-			<button id="submit">result</button>
-		</div>
-	</div>
-	<div clas="row">
-		<div class="col-lg-12">	
-			<p id="results"></p>
-		</div>
-	</div>
-</div>						
+<div id="subwrapper">
+<button id="start"> start </button>
+</div>
 
 
+			
+
+</div>
 <script src="assets/javascript/app.js" type="text/javascript"></script>
 </body>
 </html>
